<resources>
    <string name="app_name">Sarvpriye Foundation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="contact_us">Contact</string>
    <string name="menu_send">Send</string>
    <string name="volunteer">Volunteer</string>
    <string name="about_us">About Us</string>
    <string name="chalk_talk_show">Chalk Talk Show</string>
    <string name="social_feeds">Social Feeds</string>
    <string name="moto">"
        "A good head and good heart are always a formidable combination.
        But when you add to that a literate tongue or pen, then you have something very special." ~ Nelson Mandela
        #pehaleknayisochki
    </string>
</resources>
