<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_volunteer_black_24dp"
            android:title="@string/volunteer" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_news_black_24dp"
            android:title="@string/social_feeds"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_talk_black_24dp"
            android:title="@string/chalk_talk_show"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about_us" />
        </menu>
    </item>

</menu>
